# regolith-lain

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bas.cmake
brp/: CMakeLists.txt
brp/include/rgh/brp/: IO_port.hpp  IO_string_utils.hpp  block_diffuser.hpp  descriptor.hpp  descriptor.hpp.in  divergent_ring.hpp
brp/src/: IO_port.cpp  IO_string_utils.cpp  _brp_implemented.cpp
gep/: CMakeLists.txt
gep/include/rgh/gep/: compound.hpp  core.hpp  daemon.hpp  dispenser.hpp  dispenser_morphs.hpp  divergent_ring.hpp  fastcli.hpp  fastexp.hpp  rtatomic.hpp  text_utils.hpp  versioned_atomics.hpp
gep/src/: _gep_implemented.cpp  text_utils.cpp
osp/: .gitignore  CMakeLists.txt
osp/include/rgh/osp/: IO_serial.hpp  IO_sockets.hpp  IO_utils.hpp  cache.hpp  core.hpp  hyper_net.hpp  imm_widgets.hpp  immersive.hpp  madonna.hpp  render3.hpp  sys_interface.hpp  tempo.hpp  thread_pool.hpp
osp/src/: IO_serial.cpp  IO_sockets.cpp  IO_utils.cpp  _osp_implemented.cpp  core.cpp  hyper_net.cpp  immersive.cpp  render3.cpp
ruptures/madonna/: CMakeLists.txt  bridge.hpp  main.cpp
ruptures/madonna/docks/: cli.cpp  hon-opt-diff.cpp  hon-opt-diffless.cpp  hon-opt.cpp
ucp/: CMakeLists.txt
ucp/include/rgh/ucp/: IO_i2c_ifs.hpp  compound.hpp  core.hpp  daemon.hpp
ucp/include/rgh/ucp/esp32-4x/: IO_i2c.hpp
ucp/include/rgh/ucp/esp32-5x/: HRPT_array.hpp  IO_i2c.hpp  button.hpp  nvs_flash.hpp  uP_temp.hpp
ucp/include/rgh/ucp/esp32-5x/sns-drv/: bmp280.hpp  bmx280.hpp
ucp/include/rgh/ucp/ino/: thingsboard_daemon.hpp  wifi_daemon.hpp
ucp/include/rgh/ucp/sns-drv/: aht21.hpp  bme280.hpp  bmp280.hpp
ucp/src/: _ucp_implemented.cpp
